# cmake-example

./: CMakeLists.txt  README.md  config.h.in  example.cxx
lib/: CMakeLists.txt  mylib.cxx  mylib.h
